# autograph

./: .gitignore  CMakeLists.txt  Cargo.toml  Package.swift  README.md  package-lock.json  package.json  specification.md  types.d.ts
.github/: dependabot.yml
android/: AndroidManifest.xml  build.gradle.kts
apple/Clibautograph.xcframework/: Info.plist
cplusplus/benchmarks/: auth.cpp  cert.cpp  key_exchange.cpp  key_pair.cpp  message.cpp  ownership.cpp  safety_number.cpp
cplusplus/cmake/: emscripten.cmake  install.cmake  project.cmake  sources.cmake  targets.cmake  tests.cmake
cplusplus/include/: autograph.h
cplusplus/scripts/: android-aar.sh  apple-xcframework.sh  build.sh
cplusplus/src/: auth.c  bytes.c  bytes.cpp  cert.c  certify.c  channel.c  channel.cpp  cipher.c  diffie_hellman.c  external.c  handshake.cpp  hash.c  kdf.c  key_exchange.c  key_exchange.cpp  key_pair.c  key_pair.cpp  message.c  numbers.c  pad.c  party.cpp  safety_number.c  safety_number.cpp  session.c  session.cpp  sign.c  sign.cpp  sizes.c  sizes.cpp  state.c
cplusplus/tests/: channel.cpp  key_pair.cpp  session.cpp
go/: go.mod
go/auth/: auth.go
go/cert/: cert.go
go/channel/: channel.go  channel_test.go
go/constants/: constants.go
go/kdf/: kdf.go
go/keyexchange/: keyexchange.go
go/keypair/: keypair.go  keypair_test.go
go/numbers/: numbers.go
go/state/: state.go
go/types/: types.go
gradle/wrapper/: gradle-wrapper.properties
rust/src/: auth.rs  bytes.rs  cert.rs  channel.rs  (+11 more)
typescript/: package-lock.json
verification/: README.md
website/: package-lock.json
(+62 files in other folders)
