[package]
publish = false
name = "autograph"
description = "A Rust implementation of the Autograph protocol"
version = "0.4.0"
authors = ["Christoffer Carlsson <cc@christofferc.com>"]
edition = "2021"
keywords = [
    "security",
    "identity",
    "cryptography",
    "privacy",
    "authentication",
    "freedom",
    "verification",
    "ed25519",
    "hkdf",
    "x25519",
    "chacha20-poly1305",
    "elliptic-curves",
    "ownership",
    "decentralization",
    "diffie-hellman"
  ]
repository = "https://github.com/christoffercarlsson/autograph"

[lib]
name = "autograph"
path = "rust/src/lib.rs"

[[test]]
name = "channel_test"
path = "rust/tests/channel.rs"

[[test]]
name = "key_pair_test"
path = "rust/tests/key_pair.rs"

[dependencies]
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.0", default-features = false, features = ["rand_core", "zeroize"] }
hkdf = "0.12.4"
rand_core = "0.6.4"
sha2 = { version = "0.10.8", default-features = false }
x25519-dalek = { version = "2.0.0", default-features = false, features = ["static_secrets", "zeroize"] }
zeroize = "1.7.0"

[dev-dependencies]
rand = "0.8.5"
